<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="55dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:weightSum="8"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mit"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:text="@string/mit_f_zzek_ma_nyomdd_meg_a_gombot_hogy_megtudd"
                android:textAlignment="center"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/nyomd"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:text="@string/nyomdd_meg_a_gombot_hogy_megtudd"
                android:textAlignment="center"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:weightSum="3"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="3dp"
                android:background="@color/prestige_blue"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/receptnev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/szures"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                <Spinner
                    android:id="@+id/spinner_kategoriak"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape"
                    android:text="@string/kategoriak_form"
                    android:textAlignment="center" />
            </LinearLayout>
            <ImageButton
                android:layout_width="match_parent"
                android:id="@+id/btn_random"
                android:layout_weight="2"
                android:layout_marginTop="-5dp"
                app:tint="@color/black_pearl"
                android:layout_height="0dp"
                android:src="@drawable/ic_baseline_fastfood_24"
                android:contentDescription="@string/random_generator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:id="@+id/result"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="30sp"
                tools:text="Az eredmény helye"
                android:layout_height="0dp"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/app_bar_mitfozzekma"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar2"
        android:paddingHorizontal="5dp"
        app:itemShapeFillColor="@color/white"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>