<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:weightSum="2"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/receptosszes"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/osszes_recept"
                android:textAlignment="center"
                android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/prestige_blue"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/receptnev"
                android:layout_width="120dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/szures" />
            <Spinner
                android:id="@+id/spinner_kategoriak"
                android:layout_width="219dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:background="@drawable/shape"
                android:text="@string/kategoriak_form"
                android:textAlignment="center" />
        </LinearLayout>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ReceptRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_recept" />

    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#ffaf40"
            android:theme="@style/fab_3_rounded"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add_float_but" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar2"
        android:paddingHorizontal="5dp"
        app:itemShapeFillColor="@color/white"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>